2005-03-24  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/DdTargets.py: new module to manage drag and drop target data.
	* src/Makefile.am: added DdTargets.py
	* src/ScratchPad.py: modified to use DdTargets.py. This is the first
	stage. I will look at modifying EditPersons.py to use DdTargets.py next.
	
2005-03-23  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib.py: Added self.get_date() to get_text_data_child_list().
	This way the date is searchable in the full-text search filter.
	
	* doc/gramps-manual/de/*.xml: Incorporated changes from STABLE branch.

2005-03-23  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (PrivacyBase): Add base class for privacy capabilities;
	(PrivateSourceNote): Inherits from SourceNote and PrivacyBase;
	(MediaRef,Url,Witness,SourceRef): Remove unneeded privacy methods.
	* src/ImageSelect.py (GlobalMediaProperties.display_refs): Typos.

	* src/plugins/Verify.py (VerifyResults): Add class for displaying
	results; help for the settings window; single instance of the tool.
	* src/plugins/verify.glade: HIG compliance, break things into tabs.

	* src/gramps_main.py (tool_callback): Typo.
	* src/QuestionDialog.py: Use gramps icon.
	* src/plugins/EventCmp.py: HIG; single instance; help.
	* src/plugins/eventcmp.glade: HIG; help.
	* src/plugins/Desbrowser.py: HIG, help, rebuild model after edit.
	* src/plugins/desbrowse.glade: help, info label.
	* src/plugins/PatchNames.py: HIG, help, single instance.
	* src/plugins/patchnames.glade: HIG, help.
	* src/plugins/Merge.py: HIG, help, single instance.
	* src/plugins/merge.glade: HIG, help.
	* src/plugins/ChangeNames.py: HIG, help, single instance.

2005-03-22  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (MediaBase): Add base class for media references;
	(BaseObject): Add has_handle_reference, remove_handle_references,
	and replace_handle_reference methods; (SourceNote): Add
	replace_source_references method; (People,Family,Event,MediaObject):