@@ -8,7 +8,7 @@
   <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
-  <property name="modal">True</property>
+  <property name="modal">False</property>
   <property name="default_width">450</property>
   <property name="default_height">400</property>
   <property name="resizable">True</property>
